examples/codegen/effects/generators_complex.an
effect Emit a with
    emit: a -> Unit

iota (n: U32) = loop (i = 0) ->
    if i < n then
        emit i
        recur (i + 1)

filter (stream: Unit -> Unit can Emit a) (f: a -> Bool pure) =
    handle stream ()
    | emit x ->
        if f x then
            emit x
        resume ()

map (stream: Unit -> Unit can Emit a) (f: a -> b pure): Unit can Emit b =
    handle stream ()
    | emit x ->
        emit (f x)
        resume ()

enumerate (stream: Unit -> Unit can Emit a): Unit can Emit (U32, a) =
    // Bug: can't mutably capture i in handle branch if it is declared as `mut i`
    i = !0u32
    handle stream ()
    | emit x ->
        emit (i, x)
        i := @i + 1
        resume ()

for (stream: Unit -> Unit can Emit a) (f: a -> Unit pure) =
    handle stream ()
    | emit x ->
        f x
        resume ()

even x = x % 2 == 0

my_print (x1: !U32, U32) =
    x = @first x1
    y = second x1
    print "${x}, ${y}"

iota 10
    with filter even
    with map (_ * 2u32)
    with enumerate
    with for my_print

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/effects/generators_complex.an:1:1
// 1 | effect Emit a with	// error: This program has no `main` function
//   | 
// 2 |     emit: a -> Unit
// 
// examples/codegen/effects/generators_complex.an:2:13
// 1 | effect Emit a with
// 2 |     emit: a -> Unit	// error: Expected the end of this block but found `->`
//   |             ^^
// 
// examples/codegen/effects/generators_complex.an:6:9
// 5 |     if i < n then
// 6 |         emit i	// error: `emit` not found in scope
//   |         ^^^^
// 7 |         recur (i + 1)
// 
// examples/codegen/effects/generators_complex.an:9:8
//    | // error: Expected `=` to begin the function body but found `(`
//  9 | filter (stream: Unit -> Unit can Emit a) (f: a -> Bool pure) =
//    |        ^
// 10 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:16:5
//    | // error: Expected `=` to begin the function body but found `(`
// 16 | map (stream: Unit -> Unit can Emit a) (f: a -> b pure): Unit can Emit b =
//    |     ^
// 17 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:22:11
//    | // error: Expected `=` to begin the function body but found `(`
// 22 | enumerate (stream: Unit -> Unit can Emit a): Unit can Emit (U32, a) =
//    |           ^
// 23 |     // Bug: can't mutably capture i in handle branch if it is declared as `mut i`
// 
// examples/codegen/effects/generators_complex.an:31:1
//    | // error: Expected a top-level item but found `for`
// 31 | for (stream: Unit -> Unit can Emit a) (f: a -> Unit pure) =
//    | ^^^
// 32 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:39:15
// 39 | my_print (x1: !U32, U32) =	// error: Expected a type but found `!`
//    |               ^
// 40 |     x = @first x1
// 
// examples/codegen/effects/generators_complex.an:40:9
// 39 | my_print (x1: !U32, U32) =
// 40 |     x = @first x1	// error: Expected an expression but found `@`
//    |         ^
// 41 |     y = second x1
// 
// examples/codegen/effects/generators_complex.an:42:12
// 41 |     y = second x1
// 42 |     print "${x}, ${y}"	// error: Expected the end of this block but found `${`
//    |            ^^
// 
// examples/codegen/effects/generators_complex.an:44:6
// 44 | iota 10	// error: Expected `=` to begin the function body but found `10`
//    |      ^^
// 45 |     with filter even
// 
// Found 11 errors and 0 warnings

